Fixed input style on firefox.

--- a/Js/Ui/Components/Input/styles.css
+++ b/Js/Ui/Components/Input/styles.css
@@ -6,10 +6,10 @@
 }
 
 .input {
-	padding: 21px 15px;
+	padding: 10px 15px;
 	border: 1px solid #cdcdcd;
 	width: 100%;
-	height: 34px;
+	height: 45px;
 	font-size: 14px;
 	background-image: none;
 	line-height: 135%;
